# libdiscript

./: CMakeLists.txt  README.md  discriptlib.sublime-workspace
include/: token.h  tokenizer.h
src/: tokenizer.cpp
